--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -467,6 +467,7 @@ h6 {
   font-weight: 700;
   margin-bottom: 15px;
   font-size: 18px;
+  text-align: left;
 }
 
 #hero .icon-box .title a {
@@ -478,6 +479,7 @@ h6 {
   font-size: 15px;
   line-height: 28px;
   margin-bottom: 0;
+
 }
 
 #hero .icon-box .icon {
@@ -496,6 +498,15 @@ h6 {
 
 #hero .icon-box:hover .title a {
   color: #2487ce;
+}
+
+#hero .continue-btn { 
+  margin-left: 16%;
+  margin-top: 8%;
+}
+
+#hero .continue-btn i { 
+  font-size: 1.3rem;
 }
 
 @media (min-width: 1024px) {
@@ -617,33 +628,141 @@ section {
 }
 
 /*--------------------------------------------------------------
-# Counts
+# Artcle
 --------------------------------------------------------------*/
-.counts {
-  padding: 60px 0;
+#main .article{
+  margin-top: 2rem !important;
 }
 
-.counts .count-box {
-  width: 100%;
-  text-align: center;
+.mb-5{
+  margin-top: -5rem;
+  text-align: justify;
 }
 
-.counts .count-box span {
-  font-size: 48px;
-  line-height: 48px;
-  display: block;
+/*--------------------------------------------------------------
+# About Video
+--------------------------------------------------------------*/
+
+.about-video{
+  margin-top: -14rem;
+}
+
+.about-video .content {
+  font-size: 15px;
+}
+.about-video .content h3 {
   font-weight: 700;
+  font-size: 24px;
   color: #124265;
-  margin-left: 80px;
-  margin: auto;
+}
+.about-video .content ul {
+  list-style: none;
+  padding: 0;
+}
+.about-video .content ul li {
+  padding-bottom: 10px;
+  padding-left: 28px;
+  position: relative;
+}
+.about-video .content ul i {
+  font-size: 24px;
+  color: #2487ce;
+  position: absolute;
+  left: 0;
+  top: -2px;
+}
+.about-video .content p:last-child {
+  margin-bottom: 0;
+}
+.about-video .play-btn {
+  width: 94px;
+  height: 94px;
+  background: radial-gradient(#2487ce 50%, rgba(36, 135, 206, 0.4) 52%);
+  border-radius: 50%;
+  display: block;
+  position: absolute;
+  left: calc(50% - 47px);
+  top: calc(50% - 47px);
+  overflow: hidden;
+}
+.about-video .play-btn::after {
+  content: "";
+  position: absolute;
+  left: 50%;
+  top: 50%;
+  transform: translateX(-40%) translateY(-50%);
+  width: 0;
+  height: 0;
+  border-top: 10px solid transparent;
+  border-bottom: 10px solid transparent;
+  border-left: 15px solid #fff;
+  z-index: 100;
+  transition: all 400ms cubic-bezier(0.55, 0.055, 0.675, 0.19);
+}
+.about-video .play-btn::before {
+  content: "";
+  position: absolute;
+  width: 120px;
+  height: 120px;
+  -webkit-animation-delay: 0s;
+  animation-delay: 0s;
+  -webkit-animation: pulsate-btn 2s;
+  animation: pulsate-btn 2s;
+  -webkit-animation-direction: forwards;
+  animation-direction: forwards;
+  -webkit-animation-iteration-count: infinite;
+  animation-iteration-count: infinite;
+  -webkit-animation-timing-function: steps;
+  animation-timing-function: steps;
+  opacity: 1;
+  border-radius: 50%;
+  border: 5px solid rgba(36, 135, 206, 0.7);
+  top: -15%;
+  left: -15%;
+  background: rgba(198, 16, 0, 0);
+}
+.about-video .play-btn:hover::after {
+  border-left: 15px solid #2487ce;
+  transform: scale(20);
+}
+.about-video .play-btn:hover::before {
+  content: "";
+  position: absolute;
+  left: 50%;
+  top: 50%;
+  transform: translateX(-40%) translateY(-50%);
+  width: 0;
+  height: 0;
+  border: none;
+  border-top: 10px solid transparent;
+  border-bottom: 10px solid transparent;
+  border-left: 15px solid #fff;
+  z-index: 200;
+  -webkit-animation: none;
+  animation: none;
+  border-radius: 0;
 }
 
-.counts .count-box p {
-  padding: 8px 0 0 0;
-  font-family: "Raleway", sans-serif;
-  font-weight: 600;
-  font-size: 14px;
-  color: #1e6ca6;
+@-webkit-keyframes pulsate-btn {
+  0% {
+    transform: scale(0.6, 0.6);
+    opacity: 1;
+  }
+  100% {
+    transform: scale(1, 1);
+    opacity: 0;
+  }
+}
+
+@keyframes pulsate-btn {
+  0% {
+    transform: scale(0.6, 0.6);
+    opacity: 1;
+  }
+  100% {
+    transform: scale(1, 1);
+    opacity: 0;
+  }
 }
 
 /*--------------------------------------------------------------
@@ -652,14 +771,20 @@ section {
 .logos {
   padding: 15px 0;
   text-align: center;
+  background-color: #b5dcfa2a;
 }
 
 .logos .row {
-  margin-left: 33%;
+  margin: 2% 0 2% 17%;
+}
+
+.logos .row div {
+  margin-left: 3em ;
+  margin-right: 3em;
 }
 
 .logos img {
-  max-width: 80%;
+  max-width: 130%;
   transition: all 0.4s ease-in-out;
   display: inline-block;
   padding: 15px 0;
