--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -500,12 +500,12 @@ h6 {
   color: #2487ce;
 }
 
-#hero .continue-btn { 
+#hero .continue-btn {
   margin-left: 16%;
   margin-top: 8%;
 }
 
-#hero .continue-btn i { 
+#hero .continue-btn i {
   font-size: 1.3rem;
 }
 
@@ -630,11 +630,11 @@ section {
 /*--------------------------------------------------------------
 # Artcle
 --------------------------------------------------------------*/
-#main .article{
+#main .article {
   margin-top: 2rem !important;
 }
 
-.mb-5{
+.mb-5 {
   margin-top: -5rem;
   text-align: justify;
 }
@@ -643,27 +643,31 @@ section {
 # About Video
 --------------------------------------------------------------*/
 
-.about-video{
+.about-video {
   margin-top: -14rem;
 }
 
 .about-video .content {
   font-size: 15px;
 }
+
 .about-video .content h3 {
   font-weight: 700;
   font-size: 24px;
   color: #124265;
 }
+
 .about-video .content ul {
   list-style: none;
   padding: 0;
 }
+
 .about-video .content ul li {
   padding-bottom: 10px;
   padding-left: 28px;
   position: relative;
 }
+
 .about-video .content ul i {
   font-size: 24px;
   color: #2487ce;
@@ -671,12 +675,39 @@ section {
   left: 0;
   top: -2px;
 }
+
 .about-video .content p:last-child {
   margin-bottom: 0;
 }
 
-.about-video .container .row video{
-  margin-top: -2rem;
+.about-video .content p{
+  text-align: justify;
+}
+.about-video .container .row video {
+  width: 100%;
+  height: auto;
+}
+
+@media (max-width: 768px) {
+  .about-video .container .row video {
+    margin-top: 4rem;
+
+    /* Setting width & height to auto prevents the browser from stretching or squishing the video */
+    width: 100%;
+    height: 100%;
+
+    /* Center the video */
+    top: 50%;
+    left: 50%;
+  }
+
+  .about-video .content h3{
+    text-align: center;
+  }
+
+  .about-video .content p{
+    text-align: justify;
+  }
 }
 
 /*--------------------------------------------------------------
@@ -693,7 +724,7 @@ section {
 }
 
 .logos .row div {
-  margin-left: 3em ;
+  margin-left: 3em;
   margin-right: 3em;
 }
 
@@ -897,7 +928,8 @@ section {
   transition: 0.3s;
 }
 
-#footer .social-links #github-footer, #git-footer {
+#footer .social-links #github-footer,
+#git-footer {
   background: #000;
 }
 
