--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -600,6 +600,9 @@ section {
   line-height: 1;
 }
 
+.about .content p{
+text-align: justify;
+}
 .about .content p:last-child {
   margin-bottom: 0;
 }
@@ -691,12 +694,8 @@ section {
 @media (max-width: 768px) {
   .about-video .container .row video {
     margin-top: 4rem;
-
-    /* Setting width & height to auto prevents the browser from stretching or squishing the video */
     width: 100%;
     height: 100%;
-
-    /* Center the video */
     top: 50%;
     left: 50%;
   }
